Batch-fetch author nicknames in CommunityCommentService.findByPostId to avoid N+1 queries
Collect unique authorIds and fetch users in a single query, build id->nickname map and use it when constructing responses.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>